# IBDmix

./: .gitattributes  .gitignore  .gitmodules  01_GenotypeInputFromVCF.cpp  CMakeLists.txt  FUIntroSeg_v2.1.cpp  README.md
.github/actions/acceptance_test/: Dockerfile  acceptance_test.sh  action.yml  entrypoint.sh  run_local.sh
.github/actions/cmake_test/: .Dockerfile.swp  .entrypoint.sh.swp  Dockerfile  entrypoint.sh
.github/workflows/: acceptance.yml  tests.yml  tests_no_custom_action.yml
IBDmix/: 01_GenotypeInputFromVCF.cpp  FUIntroSeg_Summary.py  FUIntroSeg_v2.1.cpp  FUIntroSegcalling_onePop.sh  FUIntroSegcalling_wholePop.sh  Genotype_Reader.cpp  Genotype_Reader.hpp  IBD_Collection.cpp  IBD_Collection.hpp  IBD_Segment.cpp  IBD_Segment.hpp  IBD_Stack.cpp  IBD_Stack.hpp  IBD_node.cpp  IBDmix.cpp  IBDmix.py  generate_gt.cpp  merge.sh  mergeCallsets_step1.sh  mergeVCF.cpp  merge_genotype.py  summary.sh
include/IBDmix/: Genotype_Reader.h  IBD_Collection.h  IBD_Segment.h  IBD_Stack.h  Mask_Reader.h  Sample_Mapper.h  Segment_Recorders.h  lod_calculator.h  vcf_file.h
j.cell.2020.01.012-workflow/: README.md  Snakefile  config.yaml  generate_cpg_mask.py  generate_mask.smk
j.cell.2020.01.012-workflow/local_run/: config.yaml
snakefiles/: Snakefile  config.yaml  ibdmix.smk  translate_distance.py  translate_distance_test.py
src/: CMakeLists.txt  Genotype_Reader.cc  IBD_Collection.cc  IBD_Segment.cc  IBD_Stack.cc  Mask_Reader.cc  Sample_Mapper.cc  Segment_Recorders.cc  generate_gt.cc  lod_calculator.cc  main.cc  summary.sh  tabulate_lods.cc  vcf_file.cc
tests/: CMakeLists.txt  mergeVCF.cpp  run_tests.sh  test_FUIntroSeg.cpp  test_Genotype_Reader.cc  test_Genotype_Reader.cpp  test_IBD_Segment.cc  test_IBD_Stack.cc  test_IBD_node.cc  test_IBD_node.cpp  test_IBD_segment.cc  test_IBD_segment.cpp  test_Mask_Reader.cc  test_Sample_Mapper.cc  test_Segment_Recorders.cc  test_ibd.sh  test_lod_calculator.cc  test_merge.sh  test_mergeVCF.cc  test_merge_genotype.py  test_node.sh  test_vcf_file.cc
